package tugas.tax;

public interface TaxCalculator {
    double calculate(double income);
}